--- a/src/main/webapp/content/css/main.css
+++ b/src/main/webapp/content/css/main.css
@@ -17,7 +17,7 @@ body {
     background:transparent;
     padding-top:.75rem;
     padding-bottom:.75rem;
-    color: #000000;
+    color: #ffffff;
     border-radius:0;
     box-shadow:none;
     border:none;
